tests/valid/MethodCall_Valid_4.whiley
int f(System x):
    return x->get()

int get():
    return 123

void main([[char]] args):
    println(str(this->f(this)))
