tests/invalid/MethodCall_CompileFail_4.whiley
int f(System x, int x):
    return x->get()

int get():
    return 1

void main([string] args):
    print str(f(this,1))
